--- a/style.css
+++ b/style.css
@@ -35,10 +35,12 @@ body {
   /* background: color image repeat position/size*/
 
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -161,4 +163,14 @@ ul li a {
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1px solid var(--text-color);
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
